--- a/K-Means.ipynb
+++ b/K-Means.ipynb
@@ -774,7 +774,7 @@
    ],
    "source": [
     "data1 = data1.to_numpy()\n",
-    "data1[prediction==1,0]"
+    "data1[prediction1==1,0]"
    ]
   },
   {
